Bug 1861434 - wasm: Report OOM error instead of OOM string for module compilation. r=jandem

Module compilation fails most frequently from large heap allocations or
not enough code memory. In these cases, we're very likely able to allocate
a proper error object. This commit switches module compilation to report
an InternalError now in these cases.

Differential Revision: https://phabricator.services.mozilla.com/D197969